# lynxmotion_al5d

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: ros2_controllers.yaml
include/lynxmotion_al5d_description/: brick.hpp
launch/: al5d_gazebo_control.launch.py  display.launch.py  world.launch.py
lynxmotion_al5d_description/: brick_manager.py  utils.py
meshes/collision/: elbow.stl  finger_left.stl  finger_right.stl  gripper.stl  rotation_cylinder.stl  shoulder.stl  support.stl  top_box.stl  wrist.stl
meshes/visual/: gripper.dae
msg/: Pose.msg
rviz/: display.rviz
srv/: KillBrick.srv  SpawnBrick.srv  TeleportAbsolute.srv  TeleportRelative.srv
urdf/: lynxmotion_al5d.urdf.xacro  lynxmotion_al5d_properties.urdf.xacro  table.xacro
worlds/: al5d.world
